// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileUpload handles file upload success 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root MuiBox-root-10"
  >
    <div
      class="MuiBox-root MuiBox-root-11 makeStyles-dropZone-9"
    >
      <section>
        <div
          class="MuiBox-root MuiBox-root-14"
          tabindex="0"
        >
          <input
            autocomplete="off"
            data-testid="drop-zone-input"
            multiple=""
            style="display: none;"
            tabindex="-1"
            type="file"
          />
          <div
            class="MuiBox-root MuiBox-root-15"
          >
            <svg
              class="makeStyles-textSpacing-12"
              role="presentation"
              style="width: 3rem; height: 3rem;"
              viewBox="0 0 24 24"
            >
              <path
                d="M9,10V16H15V10H19L12,3L5,10H9M12,5.8L14.2,8H13V14H11V8H9.8L12,5.8M19,18H5V20H19V18Z"
                style="fill: currentColor;"
              />
            </svg>
            <h3
              class="MuiTypography-root makeStyles-textSpacing-12 MuiTypography-h3"
            >
              Drag your files here, or 
              <a
                class="MuiTypography-root MuiLink-root MuiLink-underlineHover makeStyles-browseLink-13 MuiTypography-colorPrimary"
              >
                Browse Files
              </a>
            </h3>
            <span
              class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
            >
              Maximum file size: 50 MB
            </span>
            <span
              class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
            >
              Maximum file count: 10
            </span>
          </div>
        </div>
      </section>
    </div>
    <div
      class="MuiBox-root MuiBox-root-16"
    >
      <ul
        class="MuiList-root MuiList-padding"
      >
        <li
          class="MuiListItem-root makeStyles-uploadListItem-17 MuiListItem-gutters"
        >
          <div
            class="MuiBox-root MuiBox-root-28"
          >
            <div
              class="MuiBox-root MuiBox-root-29"
            >
              <div
                class="MuiBox-root MuiBox-root-30"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1"
                >
                  testpng.txt
                </p>
                <p
                  class="MuiTypography-root makeStyles-uploadListStatus-18 MuiTypography-body1"
                >
                  uploading
                </p>
              </div>
              <div
                class="MuiBox-root MuiBox-root-31"
              >
                <div
                  aria-valuemax="100"
                  aria-valuemin="0"
                  aria-valuenow="0"
                  class="MuiLinearProgress-root MuiLinearProgress-colorPrimary makeStyles-uploadingColor-22 MuiLinearProgress-determinate"
                  role="progressbar"
                >
                  <div
                    class="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary makeStyles-uploadingBarColor-23 MuiLinearProgress-bar1Determinate"
                    style="transform: translateX(-100%);"
                  />
                </div>
              </div>
            </div>
            <div
              class="MuiBox-root MuiBox-root-32"
            >
              <div
                class="MuiBox-root MuiBox-root-34"
              >
                <button
                  aria-label="cancel upload"
                  class="MuiButtonBase-root MuiIconButton-root"
                  tabindex="0"
                  title="Cancel Upload"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <svg
                      role="presentation"
                      style="width: 1.5rem; height: 1.5rem;"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M13.46,12L19,17.54V19H17.54L12,13.46L6.46,19H5V17.54L10.54,12L5,6.46V5H6.46L12,10.54L17.54,5H19V6.46L13.46,12Z"
                        style="fill: currentColor;"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FileUpload matches the snapshot 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root MuiBox-root-12"
  >
    <div
      class="MuiBox-root MuiBox-root-13 makeStyles-dropZone-1"
    >
      <section>
        <div
          class="MuiBox-root MuiBox-root-16"
          tabindex="0"
        >
          <input
            autocomplete="off"
            data-testid="drop-zone-input"
            multiple=""
            style="display: none;"
            tabindex="-1"
            type="file"
          />
          <div
            class="MuiBox-root MuiBox-root-17"
          >
            <svg
              class="makeStyles-textSpacing-14"
              role="presentation"
              style="width: 3rem; height: 3rem;"
              viewBox="0 0 24 24"
            >
              <path
                d="M9,10V16H15V10H19L12,3L5,10H9M12,5.8L14.2,8H13V14H11V8H9.8L12,5.8M19,18H5V20H19V18Z"
                style="fill: currentColor;"
              />
            </svg>
            <h3
              class="MuiTypography-root makeStyles-textSpacing-14 MuiTypography-h3"
            >
              Drag your files here, or 
              <a
                class="MuiTypography-root MuiLink-root MuiLink-underlineHover makeStyles-browseLink-15 MuiTypography-colorPrimary"
              >
                Browse Files
              </a>
            </h3>
            <span
              class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
            >
              Maximum file size: 50 MB
            </span>
            <span
              class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
            >
              Maximum file count: 10
            </span>
          </div>
        </div>
      </section>
    </div>
    <div
      class="MuiBox-root MuiBox-root-18"
    />
  </div>
</DocumentFragment>
`;
